<resources>
    <string name="app_name">Wordle</string>

    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>

    <string name="enter">↵</string>
    <string name="delete">⌫</string>

    <string name="wordle">WORDLE</string>
    <string name="result">result</string>
    <string name="play_again">Play again!</string>
    <string name="statistics">STATISTICS</string>
    <string name="played">Played</string>
    <string name="win_percentage">Win %</string>
    <string name="current_streak">Current streak</string>
    <string name="max_streak">Max streak</string>

</resources>